Melhorias no Task DTO - Concluído